Implemented CRUD operations using PostgreSQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-server.port=8080
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+# connection string
+spring.datasource.url=jdbc:postgresql://localhost:5432/turkcell-rentacardb
+spring.datasource.username=postgres
+spring.datasource.password=12345
+spring.jpa.properties.javax.persistence.validation.mode=none
